# groq-speech-to-text

./: README.md  pyproject.toml
src/groq_transcribe/: __init__.py  transcribe.py
